Addition of scoped values and start of Sdk & Context rework